<resources>
    <string name="app_name">Tasker</string>
    <string name="action_settings">Settings</string>
    <string name="no_tasks_message">You have no tasks!</string>
    <string name="clear_all">Clear All</string>
    <string name="clear_selected">Clear Selected</string>
    <string name="reminder">Reminder</string>
    <string name="description">Description:</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="task_name">Task Name:</string>
    <string name="add_task">Add Task</string>
    <string name="add">Add</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="create_account_string">Create Account</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="logout_string">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tasks_string">Tasks</string>
    <string name="projects_string">Projects</string>
    <string name="groups_string">Groups</string>
    <string name="add_members">Add Members</string>
    <string name="task_complete">Complete!</string>
    <string name="apply_button_string">Apply</string>
    <string name="edit_task_heading_string">Edit Task</string>
    <string name="no_projects_string">You have no projects!</string>

</resources>
