<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="au.com.liamgooch.tasker.Activities.Login">

    <item
        android:id="@+id/action_clear_selected"
        android:title="@string/clear_selected"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_clear_all"
        android:title="@string/clear_all"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="90"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout_string"
        app:showAsAction="never"/>
</menu>
